--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-use-cookie": "^1.4.0",
+    "slick-carousel": "^1.8.1",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
