--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-accordion": "^1.2.3",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.5",
