--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
