--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hotjar/browser": "^1.0.9",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-accordion": "^1.2.3",
     "aos": "^3.0.0-beta.6",
